clean up pause behavior

--- a/diversion.html
+++ b/diversion.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello Web - Processing.js Test</title>
+  <title>Diversion of Existence</title>
   <script src="processing-1.4.1.js"></script>
 </head>
 <body>
   <canvas id="canvas1" style="width: 1000px; height: 1000px;"></canvas>
 </body>
-<script src="hack.js"></script>
+<script src="diversion.js"></script>
 </html>
